--- a/project.css
+++ b/project.css
@@ -55,31 +55,32 @@ body {
 
   
  .parts{
-    width: 33vw;
+    width: 30vw;
     padding: 0%;
-    border: 2px solid grey;
+    border: 1px solid grey;
     display: block;
-    background-color: white;
+    background-color: rgb(230, 226, 221);
       
     
     
      }
     .cards{
     
-    border-right: 30px ;
-    display: flex;
-    justify-content:center;
-    background-color: rgb(243, 233, 224);
-    flex-wrap: wrap;
+        border-right: 10px ;
+        display: flex;
+          justify-content:center;
+          background-color:rgb(230, 226, 221);
+          flex-wrap: wrap;
     
     
     }
-    
-    .partimg {
-    width: 100%;
-    height: 70%;
-    margin-bottom: 10px ;
+  
     
     
-    
-    }
+      
+    .cards partimg {
+        width: 20%;
+        height: 20%;
+        margin-bottom: 10px ;
+    }    
+ 
