--- a/project.css
+++ b/project.css
@@ -1,131 +1,158 @@
-
 body {
-    padding: 0%;
-    margin: 0%;
-    background-color: rgb(230, 226, 221);
+  padding: 0%;
+  margin: 0%;
+  background-color: rgb(230, 226, 221);
 }
 
 .header {
   width: 100%;
   height: 50vh;
+}
 
-  }
+.header img {
+  width: 100%;
+  height: 100%;
+}
 
-  .header img {
-      width: 100%;
-      height: 100%;
-  }
+.nav {
+  overflow: hidden;
+  background-color: #333;
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+}
+
+.nav a {
+  color: rgb(156, 156, 156);
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  float: left;
+  font-size: 35px;
+}
+
+.nav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: rgb(226, 111, 111);
+  color: white;
+}
+
+#searchbar {
+  border: 1px solid rgb(219, 97, 97);
+  margin-bottom: 20px;
+  border-radius: 5px;
+  height: 30px;
+  width: 80%;
+  padding: 2px 23px 2px 30px;
+  outline: 0;
+  background-color: rgb(230, 226, 221);
+  display: flex;
+  justify-items: center;
+}
+
+.parts {
+  width: 22%;
+  padding: 0%;
+  border: 1px solid grey;
+}
+
+.parts div {
+  width: 100%;
+  height: 500px;
+}
+
+.parts div img {
+  width: 100%;
+  height: 100%;
+}
+
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: rgb(230, 226, 221);
+  gap: 10px ;
+}
+
+ 
+.newimg {
+  width: 35%;
+  padding: 0%;
+  border: 1px solid grey;
+}
+
+.newimg div {
+  width: 70%;
+  height: 300px;
+}
+
+.newimg div img {
+  width: 50%;
+  height: 50%
+}
+
+.news {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: rgb(230, 226, 221);
+  gap: 10px ;
+}
 
 
 
 
-  .nav {
-    overflow: hidden;
-    background-color: #333;
-    display: flex;
-    justify-content:space-around;
-    list-style: none;
-    
+.contact {
+  margin-top: 2rem;
+  margin-left: 18rem;
+  margin-bottom: 2rem;
+  width: 60%;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 26px;
+  color: rgb(197, 58, 58);
+  background-color: rgb(230, 226, 221);
+  border-radius: 2rem;
+  box-shadow: 2px 2px 30px 8px rgb(92, 88, 84);
+}
+.send {
+  border: 0;
+  margin-top: 15px;
+  margin-bottom: 20px;
+  padding: 10px;
+  width: 80%;
+  background-color: rgb(182, 66, 66);
+  color: white;
+  font-size: 20px;
+}
 
-    
-  }
-  
-  .nav a {
-    color: rgb(156, 156, 156);
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    float: left;
-    font-size: 35px;
-  }
-  
-  .nav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  .active {
-    background-color: rgb(226, 111, 111);
-        color: white;
-  }
+.para {
+  margin-top: 5rem;
+  margin-left: 18rem;
+  width: 50%;
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 26px;
+  color: rgb(197, 58, 58);
+  background-color: rgb(230, 226, 221);
+  border-radius: 2rem;
+  box-shadow: 2px 2px 30px 8px rgb(92, 88, 84);
+}
 
-  #searchbar {
-    border: 1px solid rgb(219, 97, 97);
-    margin-bottom: 20px;
-    border-radius: 5px;
-    height: 30px;
-    width: 80%;
-    padding: 2px 23px 2px 30px;
-    outline: 0;
-    background-color: rgb(230, 226, 221);
-    display: flex;
-    justify-items: center;
-  }
-
-
-  
- .parts{
-    width: 30vw;
-    padding: 0%;
-    border: 1px solid grey;
-    display: block;
-    background-color: rgb(230, 226, 221);
-      
-    
-    
-     }
-    .cards{
-    
-        border-right: 10px ;
-        display: flex;
-          justify-content:center;
-          background-color:rgb(230, 226, 221);
-          flex-wrap: wrap;
-    
-    
-    }
-  
-    
-    
-      
-    .cards partimg {
-        width: 20%;
-        height: 20%;
-        margin-bottom: 10px ;
-    }    
-        .contact {
-   
-          margin-top: 5rem;
-          margin-left: 18rem;
-          width: 60%;
-          height: 500px;
-          display: flex;
-          flex-direction: column;
-          justify-content: center;
-          align-items: center;
-          font-size: 26px;
-          color: rgb(197, 58, 58);
-          background-color: rgb(230, 226, 221);
-          border-radius: 2rem;
-          box-shadow: 2px 2px 30px 8px rgb(92, 88, 84);
- }
-          
-
-  .para{
-  
-
-    margin-top: 5rem;
-    margin-left: 18rem;
-    width: 50%;
-    height: 500px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 26px;
-    color: rgb(197, 58, 58);
-    background-color: rgb(230, 226, 221);
-    border-radius: 2rem;
-    box-shadow: 2px 2px 30px 8px rgb(92, 88, 84);
- }
-  
+.footer {
+  text-align: center;
+  padding: 3px;
+  background-color: #333;
+  color: white;
+}
