--- a/project.css
+++ b/project.css
@@ -156,3 +156,20 @@ body {
   background-color: #333;
   color: white;
 }
+
+
+.oneItem {
+  display: flex;
+  justify-content: space-around;
+}
+
+
+.oneItem div {
+  width: 40%;
+}
+
+
+.itemIMGOne {
+  width: 100%;
+  height: 100%;
+}
