--- a/project.css
+++ b/project.css
@@ -55,7 +55,7 @@ body {
 }
 
 .parts {
-  width: 22%;
+  width: 23%;
   padding: 0%;
   border: 1px solid grey;
   display: flex;
@@ -65,10 +65,24 @@ body {
   font-size: 15px;
   color: rgb(197, 58, 58);
   background-color: rgb(230, 226, 221);
-  border-radius: 2rem;
-  box-shadow: 2px 2px 30px 8px rgb(92, 88, 84);
+  
+  border-radius: 0px;;
+  box-shadow:  23px 23px 46px #d5c8c8,
+             -23px -23px 46px #fff0f0;
+  
+
 
 }
+     .parts:hover {
+  background-color: #f38686;
+  box-shadow: 0px 15px 20px rgba(231, 75, 83, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+ }
+ 
+ .parts:active {
+  transform: translateY(-1px);
+ }
 .seeMor{
   float:inline-end;
 background-color: rgb(226, 111, 111);
@@ -88,7 +102,7 @@ color: white;
 border-radius: 5px;}
 .parts div {
   width: 100%;
-  height: 500px;
+  height: 400px;
 }
 
 .parts div img {
@@ -103,7 +117,8 @@ border-radius: 5px;}
   flex-wrap: wrap;
   justify-content: center;
   background-color: rgb(230, 226, 221);
-  gap: 10px ;
+  font-family: cursive;
+  gap: 12px ;
 
 }
 
@@ -207,3 +222,53 @@ border-radius: 5px;}
   width: 100%;
   height: 100%;
 }
+
+
+
+.searchimg {
+
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+
+  width: 22%;
+  padding: 0%;
+  border: 1px solid grey;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 15px;
+  color: rgb(197, 58, 58);
+  background-color: rgb(230, 226, 221);
+  border-radius: 2rem;
+  box-shadow: 2px 2px 30px 8px rgb(92, 88, 84);
+
+}
+
+button {
+  padding: 1.3em 3em;
+  font-size: 12px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  font-weight: 500;
+  color: #000;
+  background-color: rgb(245, 116, 116);
+  border: none;
+  border-radius: 45px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
+ }
+ 
+ button:hover {
+  background-color: #f54b4b;
+  box-shadow: 0px 15px 20px rgba(233, 59, 68, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
+ }
+ 
+ button:active {
+  transform: translateY(-1px);
+ }
